@@ -1,46 +1,40 @@
 package uk.gov.hmcts.reform.finrem.caseorchestration.service;
 
-import com.google.common.collect.ImmutableMap;
 import org.junit.Before;
 import org.junit.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.test.context.ActiveProfiles;
-import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
 import uk.gov.hmcts.reform.finrem.caseorchestration.BaseServiceTest;
 import uk.gov.hmcts.reform.finrem.caseorchestration.TestSetUpUtils;
-import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.GeneralOrderConsented;
-import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.GeneralOrderConsentedData;
+import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.ApprovedOrder;
+import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CaseDocument;
+import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.ConsentOrderCollection;
+import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.FinremCaseData;
+import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.FinremCaseDetails;
+import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.GeneralOrder;
+import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.GeneralOrderCollectionItem;
+import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.UploadOrder;
+import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.UploadOrderCollection;
+import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.YesOrNo;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.document.BulkPrintDocument;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.evidence.FileUploadResponse;
 import uk.gov.hmcts.reform.finrem.caseorchestration.service.evidencemanagement.EvidenceManagementUploadService;
 
 import java.nio.charset.StandardCharsets;
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.Map;
 import java.util.UUID;
 
 import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.hasSize;
-import static org.hamcrest.Matchers.is;
-import static org.hamcrest.Matchers.nullValue;
+import static org.junit.Assert.assertNull;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.when;
-import static uk.gov.hmcts.reform.finrem.caseorchestration.OrchestrationConstants.PAPER_APPLICATION;
-import static uk.gov.hmcts.reform.finrem.caseorchestration.OrchestrationConstants.YES_VALUE;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.TestConstants.AUTH_TOKEN;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.TestSetUpUtils.caseDocument;
-import static uk.gov.hmcts.reform.finrem.caseorchestration.TestSetUpUtils.defaultConsentedCaseDetails;
-import static uk.gov.hmcts.reform.finrem.caseorchestration.TestSetUpUtils.defaultContestedCaseDetails;
-import static uk.gov.hmcts.reform.finrem.caseorchestration.helper.DocumentHelper.DOCUMENT_BINARY_URL;
-import static uk.gov.hmcts.reform.finrem.caseorchestration.helper.DocumentHelper.DOCUMENT_FILENAME;
-import static uk.gov.hmcts.reform.finrem.caseorchestration.helper.DocumentHelper.DOCUMENT_URL;
-import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.BULK_PRINT_COVER_SHEET_APP;
-import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.CONTESTED_CONSENT_ORDER_NOT_APPROVED_COLLECTION;
-import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.GENERAL_ORDER_COLLECTION_CONSENTED;
-import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.GENERAL_ORDER_LATEST_DOCUMENT;
-import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.UPLOAD_ORDER;
+import static uk.gov.hmcts.reform.finrem.caseorchestration.TestSetUpUtils.defaultConsentedFinremCaseDetails;
+import static uk.gov.hmcts.reform.finrem.caseorchestration.TestSetUpUtils.defaultContestedFinremCaseDetails;
 
 @ActiveProfiles("test-mock-feign-clients")
 public class ConsentOrderNotApprovedDocumentServiceTest extends BaseServiceTest {
@@ -55,7 +49,8 @@ public class ConsentOrderNotApprovedDocumentServiceTest extends BaseServiceTest 
     @Autowired private EvidenceManagementUploadService evidenceManagementUploadService;
 
     @Autowired private DocmosisPdfGenerationService docmosisPdfGenerationServiceMock;
-    private CaseDetails caseDetails;
+
+    private FinremCaseDetails finremCaseDetails;
 
     @Before
     public void setupDocumentGenerationMocks() {
@@ -72,23 +67,19 @@ public class ConsentOrderNotApprovedDocumentServiceTest extends BaseServiceTest 
     }
 
     public void setupContestedCase() {
-        caseDetails = defaultContestedCaseDetails();
+        finremCaseDetails = defaultContestedFinremCaseDetails();
 
-        Map<String, Object> caseData = caseDetails.getData();
-        caseData.put(GENERAL_ORDER_LATEST_DOCUMENT, caseDocument());
-        caseData.put(PAPER_APPLICATION, YES_VALUE);
-        caseData.put(UPLOAD_ORDER, Collections.singletonList(
-            ImmutableMap.of("value", ImmutableMap.of(
-                "DocumentLink", ImmutableMap.of(
-                    DOCUMENT_URL, "mockUrl",
-                    DOCUMENT_FILENAME, "mockFilename",
-                    DOCUMENT_BINARY_URL, GENERAL_ORDER_URL)))));
+        FinremCaseData caseData = finremCaseDetails.getData();
+        caseData.getGeneralOrderWrapper().setGeneralOrderLatestDocument(caseDocument());
+        caseData.setPaperApplication(YesOrNo.YES);
+        CaseDocument caseDocument = CaseDocument.builder().documentUrl("mock_url").documentFilename("mock_file_name").build();
+        UploadOrder uploadOrder = UploadOrder.builder().documentFileName("mock_file_name").documentLink(caseDocument).build();
+        UploadOrderCollection collection = UploadOrderCollection.builder().value(uploadOrder).id(UUID.randomUUID().toString()).build();
+        caseData.setUploadOrder(List.of(collection));
 
-        List<GeneralOrderConsentedData> generalOrders = new ArrayList<>();
-        GeneralOrderConsented generalOrder = new GeneralOrderConsented();
-        generalOrder.setGeneralOrder(caseDocument());
-        generalOrders.add(new GeneralOrderConsentedData("123", generalOrder));
-        caseData.put(GENERAL_ORDER_COLLECTION_CONSENTED, generalOrders);
+        GeneralOrder generalOrder = GeneralOrder.builder().generalOrderDocumentUpload(caseDocument).build();
+        GeneralOrderCollectionItem generalOrderCollectionItem = GeneralOrderCollectionItem.builder().id("123").generalOrder(generalOrder).build();
+        caseData.getGeneralOrderWrapper().setGeneralOrderCollection(List.of(generalOrderCollectionItem));
     }
 
     @Test
@@ -96,64 +87,63 @@ public class ConsentOrderNotApprovedDocumentServiceTest extends BaseServiceTest 
         setupContestedCase();
 
         List<BulkPrintDocument> generatedDocuments = consentOrderNotApprovedDocumentService.prepareApplicantLetterPack(
-            caseDetails, AUTH_TOKEN);
+            finremCaseDetails, AUTH_TOKEN);
 
         assertThat(generatedDocuments, hasSize(2));
-        assertThat(generatedDocuments.get(0).getBinaryFileUrl(), is(COVER_LETTER_BINARY_URL));
-        assertThat(generatedDocuments.get(1).getBinaryFileUrl(), is(TestSetUpUtils.BINARY_URL));
+        assertThat(generatedDocuments.get(0).getBinaryFileUrl(), equalTo(COVER_LETTER_BINARY_URL));
+        assertThat(generatedDocuments.get(1).getBinaryFileUrl(), equalTo(TestSetUpUtils.BINARY_URL));
 
-        assertThat(caseDetails.getData().get(BULK_PRINT_COVER_SHEET_APP), is(nullValue()));
+        assertNull(finremCaseDetails.getData().getBulkPrintCoverSheetApp());
     }
 
     @Test
     public void whenNoNotApprovedConsentOrderIsFound_thenApplicantPackPrintsWithoutIt() {
         setupContestedCase();
-        caseDetails.getData().put(UPLOAD_ORDER, null);
+        finremCaseDetails.getData().setUploadOrder(null);
 
         List<BulkPrintDocument> generatedDocuments = consentOrderNotApprovedDocumentService.prepareApplicantLetterPack(
-            caseDetails, AUTH_TOKEN);
+            finremCaseDetails, AUTH_TOKEN);
 
         assertThat(generatedDocuments, hasSize(2));
-        assertThat(generatedDocuments.get(0).getBinaryFileUrl(), is(COVER_LETTER_BINARY_URL));
-        assertThat(generatedDocuments.get(1).getBinaryFileUrl(), is(TestSetUpUtils.BINARY_URL));
+        assertThat(generatedDocuments.get(0).getBinaryFileUrl(), equalTo(COVER_LETTER_BINARY_URL));
+        assertThat(generatedDocuments.get(1).getBinaryFileUrl(), equalTo(TestSetUpUtils.BINARY_URL));
 
-        assertThat(caseDetails.getData().get(BULK_PRINT_COVER_SHEET_APP), is(nullValue()));
+        assertNull(finremCaseDetails.getData().getBulkPrintCoverSheetApp());
     }
 
     @Test
     public void getApplicantLetterPackWithNoConsentOrderAndNoGeneralOrdersReturnsEmptyList_withConsentDocGenOn() {
-        caseDetails = defaultConsentedCaseDetails();
-        caseDetails.getData().put(UPLOAD_ORDER, null);
+        finremCaseDetails = defaultConsentedFinremCaseDetails();
+        finremCaseDetails.getData().setUploadOrder(null);
 
         List<BulkPrintDocument> generatedDocuments = consentOrderNotApprovedDocumentService.prepareApplicantLetterPack(
-            caseDetails, AUTH_TOKEN);
+            finremCaseDetails, AUTH_TOKEN);
 
         assertThat(generatedDocuments, hasSize(0));
 
-        assertThat(caseDetails.getData().get(BULK_PRINT_COVER_SHEET_APP), is(nullValue()));
+        assertNull(finremCaseDetails.getData().getBulkPrintCoverSheetApp());
     }
 
     @Test
     public void givenConsentedInContestedCase_whenConsentOrderWasNotApproved_expectedDocumentsArePrinted() {
-        caseDetails = defaultContestedCaseDetails();
+        finremCaseDetails = defaultContestedFinremCaseDetails();
         addConsentedInContestedConsentOrderNotApproved();
 
         List<BulkPrintDocument> generatedDocuments = consentOrderNotApprovedDocumentService.prepareApplicantLetterPack(
-            caseDetails, AUTH_TOKEN);
+            finremCaseDetails, AUTH_TOKEN);
 
         assertThat(generatedDocuments, hasSize(2));
-        assertThat(caseDetails.getData().get(BULK_PRINT_COVER_SHEET_APP), is(nullValue()));
+        assertNull(finremCaseDetails.getData().getBulkPrintCoverSheetApp());
     }
 
     private void addConsentedInContestedConsentOrderNotApproved() {
-        Map<String, Object> caseData = caseDetails.getData();
+        FinremCaseData caseData = finremCaseDetails.getData();
+        CaseDocument caseDocument = CaseDocument.builder().documentBinaryUrl("test_url_").build();
+        ApprovedOrder approvedOrder = ApprovedOrder.builder().consentOrder(caseDocument).orderLetter(caseDocument).build();
+        ConsentOrderCollection collection1 = ConsentOrderCollection.builder().approvedOrder(approvedOrder).id(UUID.randomUUID().toString()).build();
+        ConsentOrderCollection collection2 = ConsentOrderCollection.builder().approvedOrder(approvedOrder).id(UUID.randomUUID().toString()).build();
 
-        caseData.put(CONTESTED_CONSENT_ORDER_NOT_APPROVED_COLLECTION, List.of(ImmutableMap.of(
-            "id", UUID.randomUUID().toString(),
-            "value", ImmutableMap.of(
-                "consentOrder", ImmutableMap.of(
-                    "document_binary_url", "test_url_"
-                )))));
+        caseData.getConsentOrderWrapper().setConsentedNotApprovedOrders(List.of(collection1, collection2));
 
     }
 }
